#=======================================================================================================================
# Preamble
#=======================================================================================================================
cmake_minimum_required(VERSION 3.24 FATAL_ERROR)
project(KSteam.Demo)

#=======================================================================================================================
# Include the fmt library
#=======================================================================================================================
add_subdirectory(fmt)

#=======================================================================================================================
# Define demo target
#=======================================================================================================================
add_executable(KSteamDemo EXCLUDE_FROM_ALL "")
target_sources(KSteamDemo
        PRIVATE
        main.cpp
        )
target_link_libraries(KSteamDemo
        PRIVATE
        KSteam fmt
        )